--- a/clinilockerMobile/package.json
+++ b/clinilockerMobile/package.json
@@ -20,6 +20,7 @@
     "@capacitor/haptics": "^6.0.0",
     "@capacitor/keyboard": "^6.0.0",
     "@capacitor/local-notifications": "^6.1.3",
+    "@capacitor/push-notifications": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
